# 20240816_build-web-apps-with-rust-actixweb-and-htmx

./: Cargo.toml  README.md
.devcontainer/: devcontainer.json
docs/: HELLO_WORLD_ACTIXWEB_HTMX.md
projects/hello_world_actixweb_htmx/: Cargo.toml
projects/hello_world_actixweb_htmx/src/: main.rs  routes.rs
projects/hello_world_actixweb_htmx/static/: index.html
projects/hello_world_actixweb_htmx_completed/: Cargo.toml
projects/hello_world_actixweb_htmx_completed/src/: main.rs  routes.rs
projects/hello_world_actixweb_htmx_completed/static/: index.html
projects/todo_list_app_part1/: Cargo.toml
projects/todo_list_app_part1/src/: main.rs  todos_routes.rs
projects/todo_list_app_part2/: Cargo.toml
projects/todo_list_app_part2/src/: main.rs  models.rs  todos_routes.rs
projects/todo_list_app_part2/static/: index.html
projects/todo_list_app_part3/: Cargo.toml
projects/todo_list_app_part3/src/: main.rs  models.rs  todos_data.rs  todos_routes.rs
projects/todo_list_app_part3/static/: index.html
projects/todo_list_app_part4/: Cargo.toml
projects/todo_list_app_part4/src/: main.rs  models.rs  todos_data.rs  todos_routes.rs
projects/todo_list_app_part4/static/: index.html
projects/todo_list_app_part5/: Cargo.toml
projects/todo_list_app_part5/src/: todos_routes.rs
projects/todo_list_app_part6/: Cargo.toml
projects/todo_list_app_part6/src/: main.rs  todos_data.rs  todos_routes.rs
projects/todo_list_app_part6/static/: index.html  styles.css
